[FIX] discuss: channel name overflow
Before this commit:
The channel name used to overflow in the channel suggestion section.

After this commit:
The name will not overflow in the channnel suggestion section.

Task id: 3366608

closes odoo/odoo#126965

X-original-commit: 16073c66e5e07e5bf2646a9458f06d155627ae94

--- a/addons/mail/static/src/components/discuss_sidebar_category/discuss_sidebar_category.scss
+++ b/addons/mail/static/src/components/discuss_sidebar_category/discuss_sidebar_category.scss
@@ -7,3 +7,7 @@
     user-select: none;
     -webkit-user-select: none;
 }
+
+.o_DiscussSidebarCategory_newChannelAutocompleteSuggestions {
+    word-wrap: break-word;
+}
